fixed: message too close to window edge when not maximized

--- a/res/style.css
+++ b/res/style.css
@@ -464,6 +464,7 @@ div.messageSection {
 
 div.message {
   font-family: Fontin !important;
+  margin-left: 5px;
 }
 
 .itemToggle {
